# Punk-prompt-protection

./: .gitignore  LICENSE  README.md  SECURITY.md  SESSION_RESUME.md  pyproject.toml
.github/workflows/: tests.yml
docs/: GRECO_DYNAMIC_ALPHABET_CALIBRATION.md  GRECO_STATIONARY_BUCKET_CONFIGURATION_HANDBOOK.md  IMMUTABLE_LEDGER.md
examples/: basic_usage.py
greco_prompt_guard/: __init__.py  audit.py  cli.py  greco_signature.py  ledger.py  patterns.py  policy.py
tests/: test_cli.py  test_greco_signature.py  test_guard.py  test_ledger.py
